# api/openapi.yaml
@@ -18,7 +18,7 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/CreateSubscriptionRequest'
-            example: '{"price": 400, "service_name": "Yandex Plus", "start_date": "2025-07-01", "user_id": "60601fee-2bf1-4721-ae6f-7636e79a0cba"}'
+            example: '{"price": 400, "service_name": "Yandex Plus", "start_date": "07-2025", "user_id": "60601fee-2bf1-4721-ae6f-7636e79a0cba"}'
       responses:
         '201':
           description: Подписка создана
@@ -33,16 +33,18 @@ paths:
           $ref: '#/components/responses/InternalServerError'
 
     get:
-      summary: Получить список подписок
+      summary: Получить список подписок по юзеру
       operationId: getSubscriptionList
       parameters:
         - in: query
           name: user_id
+          required: true
           schema:
             type: string
             format: uuid
         - in: query
           name: limit
+          required: true
           schema:
             type: integer
             default: 20
@@ -57,9 +59,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SubscriptionList'
+                type: array
+                items:
+                  $ref: '#/components/schemas/Subscription'
         '400':
           $ref: '#/components/responses/BadRequest'
+        '404':
+          $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/InternalServerError'
 
@@ -97,7 +103,7 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/UpdateSubscriptionRequest'
-            example: ''
+            example: '{"end_date": null,"price": 100}'
       responses:
         '200':
           description: Подписка обновлена
@@ -105,6 +111,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Subscription'
+        '400':
+          $ref: '#/components/responses/BadRequest'
         '404':
           $ref: '#/components/responses/NotFound'
         '500':
@@ -121,6 +129,33 @@ paths:
         '500':
           $ref: '#/components/responses/InternalServerError'
 
+  /subscriptions-price:
+    get:
+      summary: Подсчет суммарной стоимости всех подписок за выбранный период с фильтрацией по id пользователя и названию подписки
+      operationId: getSubscriptionPrice
+      parameters:
+        - in: query
+          name: user_id
+          schema:
+            type: string
+            format: uuid
+        - in: query
+          name: service_name
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Стоимость подписок
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SubscriptionPrice'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
 
 components:
   schemas:
@@ -137,18 +172,24 @@ components:
           format: uuid
         start_date:
           type: string
-          format: date
 
     SubscriptionId:
       type: object
-      required: [ id]
+      required: [ id ]
       properties:
         id:
           type: integer
 
+    SubscriptionPrice:
+      type: object
+      required: [ price ]
+      properties:
+        price:
+          type: integer
+
     Subscription:
       type: object
-      required: [ id, service_name, price, user_id, start_date, end_date]
+      required: [ id, service_name, price, user_id, start_date, end_date, is_delete]
       properties:
         id:
           type: integer
@@ -161,24 +202,11 @@ components:
           format: uuid
         start_date:
           type: string
-          format: date
         end_date:
           type: string
-          format: date
           nullable: true
-        delete_date:
-          type: string
-          format: date
-          nullable: true
-
-    SubscriptionList:
-      type: object
-      properties:
-        items:
-          type: array
-          required: [items]
-          items:
-            $ref: '#/components/schemas/Subscription'
+        is_delete:
+          type: boolean
 
     UpdateSubscriptionRequest:
       type: object
@@ -188,7 +216,6 @@ components:
           nullable: true
         end_date:
           type: string
-          format: date
           nullable: true
 
     ErrorResponse:
